--- a/balrog/config/config.yaml
+++ b/balrog/config/config.yaml
@@ -1,11 +1,15 @@
-agent: 
-  type: naive            # Type of agent to use (e.g., 'naive', 'cot', etc.)
+agent:
+  type: naive            # Type of agent to use (e.g., 'naive', 'cot', 'braid', etc.)
   remember_cot: True     # Whether the agent should remember its reasoning across turns
   max_text_history: 16   # Maximum number of text messages to keep in the history
   max_image_history: 0   # Maximum number of images to keep in the history
   max_cot_history: 1     # Maximum number of chain-of-thought steps to keep in history (if using 'cot' type of agent)
   max_icl_history: 1000   # Maximum number of ICL steps to keep in history (if using 'few_shot' type of agent)
   cache_icl: False
+  braid:                 # BRAID agent settings (if using 'braid' type)
+    persistent_memory_path: "memory/nethack_knowledge.json"
+    max_persistent_context: 20
+    episode_number: 0
 
 eval:
   output_dir: "results"  # Directory where evaluation results will be saved
