--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,22 @@ exclude = [
     "build",
     "dist"
 ]
+
+[tool.mypy]
+python_version = "3.10"
+ignore_missing_imports = true
+disallow_untyped_defs = false
+warn_return_any = false
+warn_unused_ignores = true
+exclude = ["build", "dist"]
+
+[[tool.mypy.overrides]]
+module = [
+    "balrog.prompt_builder.*",
+    "balrog.client",
+    "balrog.environments.wrappers.*",
+    "balrog.environments.babaisai.*",
+    "balrog.environments.crafter.*",
+    "balrog.utils",
+]
+ignore_errors = true
