Extensive journaling to monitor BRAID progress
This is the first step to a monitor program (TUI or maybe a web UI) that
can watch what the agent(s) do as they run.

--- a/balrog/config/config.yaml
+++ b/balrog/config/config.yaml
@@ -8,7 +8,11 @@ agent:
   cache_icl: False
   braid:                 # BRAID agent settings (if using 'braid' type)
     persistent_memory_path: "memory/nethack_knowledge.json"
-    max_persistent_context: 20
+    max_persistent_context: 10  # Reduced for token efficiency
+    max_text_history: 4         # Override: BRAID uses memory instead of long history
+    journal_path: "memory/braid_journal.jsonl"  # Set to null to disable journaling
+    journal_full_prompt: false  # Log full LLM prompts (large, for debugging)
+    journal_memory_details: false  # Log what was added/removed in memory updates
 
 eval:
   output_dir: "results"  # Directory where evaluation results will be saved
